// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect :props :clearable 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :defaultValue 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list">
                <div data-value="guangdong" data-level="0" class="t-tree__item t-tree__item--open" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-caret-right-small"><path fill-opacity=".9" fill-rule="evenodd" d="M384 320L384 704 672 512 384 320Z" clip-rule="evenodd"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广东省</span></span></div>
                <div data-value="guangzhou" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广州市</span></span></div>
                <div data-value="shenzhen" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">深圳市</span></span></div>
                <div data-value="jiangsu" data-level="0" class="t-tree__item t-tree__item--open" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-caret-right-small"><path fill-opacity=".9" fill-rule="evenodd" d="M384 320L384 704 672 512 384 320Z" clip-rule="evenodd"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">江苏省</span></span></div>
                <div data-value="nanjing" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">南京市</span></span></div>
                <div data-value="suzhou" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">苏州市</span></span></div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :disabled 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content t-is-disabled  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-is-disabled t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-is-disabled t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-is-disabled t-select-input" style="display: none;"><input disabled="disabled" type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :empty string 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">no data</div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :filterable 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span>
      <div class="t-input t-size-m t-select-input"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :loading 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium" style="display: none;">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :loadingText 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">data loading</p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :max 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :multiple 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--checkable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :placeholder 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;">please select address</span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input placeholder="please select address" type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :popupProps 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :size 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="large">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-l"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-l t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: large;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-l t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-l t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :treeProps 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list">
                <div data-value="guangdong" data-level="0" class="t-tree__item t-tree__item--open" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-caret-right-small"><path fill-opacity=".9" fill-rule="evenodd" d="M384 320L384 704 672 512 384 320Z" clip-rule="evenodd"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广东省</span></span></div>
                <div data-value="guangzhou" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广州市</span></span></div>
                <div data-value="shenzhen" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">深圳市</span></span></div>
                <div data-value="jiangsu" data-level="0" class="t-tree__item t-tree__item--open" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-caret-right-small"><path fill-opacity=".9" fill-rule="evenodd" d="M384 320L384 704 672 512 384 320Z" clip-rule="evenodd"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">江苏省</span></span></div>
                <div data-value="nanjing" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">南京市</span></span></div>
                <div data-value="suzhou" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">苏州市</span></span></div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :value 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list">
                <div data-value="guangdong" data-level="0" class="t-tree__item t-tree__item--open" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-caret-right-small"><path fill-opacity=".9" fill-rule="evenodd" d="M384 320L384 704 672 512 384 320Z" clip-rule="evenodd"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广东省</span></span></div>
                <div data-value="guangzhou" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广州市</span></span></div>
                <div data-value="shenzhen" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">深圳市</span></span></div>
                <div data-value="jiangsu" data-level="0" class="t-tree__item t-tree__item--open" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-caret-right-small"><path fill-opacity=".9" fill-rule="evenodd" d="M384 320L384 704 672 512 384 320Z" clip-rule="evenodd"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">江苏省</span></span></div>
                <div data-value="nanjing" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">南京市</span></span></div>
                <div data-value="suzhou" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">苏州市</span></span></div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m t-select-selected"><span class="t-select-placeholder" style="display: none;"></span><span title="shenzhen" class="t-select-selectedSingle">shenzhen</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input placeholder="shenzhen" type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :valueType 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list">
                <div data-value="guangdong" data-level="0" class="t-tree__item t-tree__item--open" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-caret-right-small"><path fill-opacity=".9" fill-rule="evenodd" d="M384 320L384 704 672 512 384 320Z" clip-rule="evenodd"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广东省</span></span></div>
                <div data-value="guangzhou" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广州市</span></span></div>
                <div data-value="shenzhen" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">深圳市</span></span></div>
                <div data-value="jiangsu" data-level="0" class="t-tree__item t-tree__item--open" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-caret-right-small"><path fill-opacity=".9" fill-rule="evenodd" d="M384 320L384 704 672 512 384 320Z" clip-rule="evenodd"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">江苏省</span></span></div>
                <div data-value="nanjing" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">南京市</span></span></div>
                <div data-value="suzhou" data-level="1" class="t-tree__item t-tree__item--open" style="--level: 1;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon"></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">苏州市</span></span></div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m t-select-selected"><span class="t-select-placeholder" style="display: none;"></span><span title="[object Object]" class="t-select-selectedSingle">[object Object]</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input placeholder="[object Object]" type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <empty> 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div>no data</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <loadingText> 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips">
            <div>data loading</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium" style="display: none;">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <prefixIcon> 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m t-has-prefix"><span class="t-select-left-icon"><div><i>icon</i></div></span><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect function :empty 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div>no data</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect function :loadingText 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips">
            <div>data loading</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium" style="display: none;">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`TreeSelect function :prefixIcon 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--fx t-tree--block-node" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m t-has-prefix"><span class="t-select-left-icon"></span><span class="t-select-placeholder" style="display: none;"></span><span title="" class="t-select-selectedSingle"></span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close-circle-filled t-size-m t-select-right-icon" name="close" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"></path>
      </svg><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon" name="loading" style="display: none;">
        <path fill-opacity=".9" fill-rule="evenodd" d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"></path>
      </svg>
    </div>
  </div>
</div>
`;
